Begin implementing swiper instead of draggable slider

--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -1,162 +1,13 @@
-
-$itemWidth: 30vw;
-
-
 .o-slider {
-	height: 40vw;
-	
-	
-	
-	
-
-	@include media("<=tablet") {
-		height: 90vw;
-	}
-	
-
-	&_inner {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		position: absolute;
-		left: 0;
-		top: 0;
-		height: 100%;
-		
-		padding: 0 $space-lg;
-	}
-
 	&_item {
-		position: relative;
-		width: 30vw;
-		height: 100%;
-		overflow: hidden;
 		
+		height: 40vw;
 		
-		&:not(:first-child) {
-			margin-left: 2rem
-		}
-
-		@include media("<=tablet") {
-			overflow: visible;
-		}
-	
-
 		img {
-			transition: $transition-zoom;
-			filter: grayscale(1);
-		}
-
-		&:hover img {
-			transform: scale(1.2);
-		}
-
-		@include media("<=tablet") {
-			width: 60vw;
-			height: 100%;
-			
-		}
-
-		.o-slider_item_title {
-			position: absolute; 
-			top: 0;
-			left: 0;
-			color: $light;
-			
-		}
-
-		.o-slider_item_subtitle {
-			position: absolute; 
-			bottom: 0;
-			right:  0;
-			color: $light !important;
-			
-		}
-
-		&:hover .o-slider_item_title, &:hover .o-slider_item_subtitle {
-			opacity: 1;
-			transform: none;
-			transition: 400ms ease;
-		}
-
-		&_info  {
-
-			font-size: 0.8rem !important;
-
-
-			.o-slider_item_title, .o-slider_item_subtitle {
-				transform: translateY(100%);
-				opacity: 0;
-				transition: 400ms ease;
-
-				@include media("<=tablet") {
-					opacity: 1;
-					transform: none;
-				}
-
-				.label::after {
-					background-color: $light;
-					transition-delay: 100ms;
-
-					@include media("<=tablet") {
-						display: none;
-					}
-				}
-			}
-		}
-
-		&_info {
-			position: absolute;
-			top: 0;
 			width: 100%;
 			height: 100%;
-			left: 0;
-			padding: $space-sm;
-
-			@include media("<=tablet") {
-				height: auto;
-				padding: $space-sm 0;
-				bottom: 0;
-				position: static;
-
-				.inner {
-					height: auto;
-				}
-
-				.o-slider_item_subtitle, .o-slider_item_title {
-					position: static;
-					&, & * {
-						color: $dark;
-						font-size: 2rem;
-						line-height: 2rem;
-					}
-					
-				}
-			}
-		}
-
-		&_info * {
-			color: $light;
-			margin: 0;
-			z-index: 2;
-		}
-	}
-
-	&_image {
-		width: 100%;
-		height: 100%;
-		position: relative;
-
-		@include media("<=tablet") {
-			
-			height: 90%;
-		}
-
-		.c-figure {
-			height: 100%;
-			width: 100%;
-
-			position: absolute;
+			object-fit: cover;
+			object-position: center;
 		}
 	}
 }
