--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -1,13 +1,45 @@
 .o-slider {
+	nav {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 3rem 0;
+	}
+
 	&_item {
-		
-		height: 40vw;
-		
+		height: 45vw;
+		width: 100%;
+
+
+		@include media("<=phoneL") {
+			height: 145vw;
+		}
+
+		.info {
+			height: 20%;
+			font-size: 2rem;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			padding: 0.8rem 0;
+			
+			@include media(">=phoneL") {
+				display: none;
+			}
+
+			* {
+				color: $dark;
+				text-align: left;
+			}
+		}
+
 		img {
 			width: 100%;
-			height: 100%;
+			height: 80%;
 			object-fit: cover;
 			object-position: center;
+			filter: grayscale(1);
 		}
 	}
 }
