Reintroduce goldeen ratio type scale

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -36,3 +36,4 @@
 @import "../../components/Slider/o-slider.scss";
 @import "../../components/Cursors/c-cursor.scss";
 @import "../../components/Drawings/o-colorBlobs.scss";
+@import "type"
