--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -409,9 +409,9 @@
 	display: block;
 }
 
-.-split {
-	opacity: 0;
-}
+// .-split {
+// 	opacity: 0;
+// }
 
 .-uppercase {
 	text-transform: uppercase;
