--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -4,6 +4,7 @@
 @import "utils";
 @import "global";
 @import "animations";
+@import "config";
 @import "objects/o-h1.scss";
 @import "objects/o-h2.scss";
 @import "objects/o-h3.scss";
