--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -1,4 +1,5 @@
 .c-arrow-button {
+
 	&:focus {
 		outline: none;
 	}
@@ -24,24 +25,22 @@
 		opacity: 1;
 	}
 
-	&:hover::after {
-		transform: scale(1);
-		top: 0;
-		left: 0;
-	}
+	// &:hover::after {
+	// 	transform: scale(1);
+	// 	top: 0;
+	// 	left: 0;
+	// }
 
-	&::after {
-		border-radius: 50%;
-		transition: 600ms ease;
-		position: absolute;
-		top: 50%;
-		left: -50%;
-		content: "";
+	.circle {
 		width: 100%;
 		height: 100%;
+		position: absolute;
 		background-color: $dark;
-		transform: scale(0.0001);
+		top: 0;
+		left: 0;
+
 	}
+
 
 	.c-arrow-svg {
 		overflow: hidden;
@@ -49,13 +48,17 @@
 		display: block;
 		z-index: 999;
 
-		circle:nth-of-type(2) {
-			transition: 400ms ease;
-			position: static;
-			transform: scale(0.001);
-			transform-origin: center;
-			fill: $dark;
-		}
+		
+
+		// circle:nth-of-type(2) {
+		// 	transition: 400ms ease;
+		// 	position: fixed;
+		// 	transform: scale(0.4);
+			
+		// 	display: block;
+		// 	transform-origin: center;
+		// 	fill: $dark;
+		// }
 
 		// &:hover circle:nth-of-type(2) {
 		// 	fill: $dark;
@@ -79,9 +82,15 @@
 		}
 
 		circle {
-			stroke: $grey !important;
+			stroke: $grey;
+			transition: 300ms ease;
 			stroke-width: 2px;
 
+		}
+	}
+	&:hover {
+		circle, ellipse {
+			stroke: none !important;
 		}
 	}
 
