--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -27,7 +27,7 @@
 		}
 
 		.o-container {
-			height: calc(100vh - $headerHeight);
+			
 
 			@include media("<=phoneL") {
 				height: auto;
@@ -61,17 +61,17 @@
 						}
 					}
 
-					.o-hero_image {
-						width: 100%;
-						height: 110vw;
-						max-height: 100%;
-						margin-left: 0;
-						margin-top: 10vw;
+					// .o-hero_image {
+					// 	width: 100%;
+					// 	height: 110vw;
+					// 	max-height: 100%;
+					// 	margin-left: 0;
+					// 	margin-top: 10vw;
 
-						.c-frame {
-							display: none;
-						}
-					}
+					// 	.c-frame {
+					// 		display: none;
+					// 	}
+					// }
 				}
 			}
 		}
@@ -96,19 +96,19 @@
 
 		}
 
-		&_image {
-			width: 50%;
-			height: 50vw;
-			max-height: 650px;
-			max-width: 550px;
-			margin-left: 2rem;
+		// &_image {
+		// 	width: 50%;
+		// 	height: 50vw;
+		// 	max-height: 650px;
+		// 	max-width: 550px;
+		// 	margin-left: 2rem;
 
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
-		}
+		// 	img {
+		// 		width: 100%;
+		// 		height: 100%;
+		// 		object-fit: cover;
+		// 	}
+		// }
 	}
 
 	.o-overview {
@@ -120,9 +120,6 @@
 				margin-bottom: $space-lg;
 			}
 
-			> * {
-				flex: 50%;
-			}
 		}
 
 		&_left,
@@ -136,21 +133,7 @@
 			margin-right: $space-lg;
 		}
 
-		@include media("<=phoneL") {
-			.o-container {
-				flex-direction: column;
-			}
 
-			&_left {
-				margin-right: 0;
-			}
-
-			&_left,
-			&_right {
-				flex: 100%;
-				margin-right: 0;
-			}
-		}
 	}
 
 	.o-feature {
@@ -263,9 +246,7 @@
 				margin-top: 0;
 			}
 
-			> * {
-				flex: 50%;
-			}
+	
 
 			.work {
 				margin-top: $space-md;
