--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -4,13 +4,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-	
 
 	.o-h1 {
-			
 		width: 100%;
 
-		&, .c-line {
+		&,
+		.c-line {
 			text-align: left !important;
 		}
 	}
@@ -24,7 +23,6 @@
 		overflow: visible;
 		transform: rotate(-30deg) translateX(-40%);
 		opacity: 0;
-		
 
 		svg {
 			overflow: visible;
@@ -32,22 +30,16 @@
 	}
 }
 
-
-.c-megaphone {
-	width: 30vw;
-}
-
 .musical-line {
 	width: 50vw;
 	path {
 		fill: none !important;
-		stroke: $yellow; 
+		stroke: $yellow;
 	}
 }
 
 .o-page_home {
 	.o-how {
-
 		.instrument-player-svg {
 			position: absolute;
 			top: 0;
@@ -199,7 +191,6 @@
 			position: static;
 			margin: 0 auto;
 			text-align: center;
-			
 
 			z-index: 999;
 		}
@@ -478,33 +469,28 @@
 			max-width: 25vw;
 		}
 
-		&:nth-child(1) {
+		&_1 {
 			grid-row: 1/2;
 			grid-column: 3/7;
 		}
 
-		&:nth-child(2) {
+		&_2 {
 			grid-row: 2/3;
 			grid-column: 6/10;
 		}
 
-		&:nth-child(3) {
+		&_3 {
 			grid-row: 3/4;
 			grid-column: 9/13;
 		}
 
-		&:nth-child(4) {
+		&_4 {
 			grid-row: 4/5;
 			grid-column: 6/10;
 		}
 
-		&:nth-child(5) {
+		&_5 {
 			grid-row: 5/6;
-			grid-column: 3/7;
-		}
-
-		&:nth-child(6) {
-			grid-row: 1/2;
 			grid-column: 3/7;
 		}
 	}
@@ -530,7 +516,6 @@
 		}
 
 		.title {
-		
 			margin: 0;
 
 			p {
