--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -20,7 +20,7 @@
 
 body {
 	overflow-x: hidden;
-	width: 100vw;
+	
 }
 
 
@@ -65,6 +65,10 @@ ul {
 	padding: 0;
 }
 
+p strong {
+	font-family: 'Kobe Bold';
+}
+
 .line-wrapper {
 	overflow: hidden;
 }
@@ -74,6 +78,9 @@ ul {
 		font-size: 12px;
 	}
 }
+
+
+
 @media (min-width: 700px) and (max-width: 1024px) {
 	html {
 		font-size: 13px;
