--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -59,6 +59,8 @@
 			width: 100%;
 			height: 100%;
 			opacity: 0;
+
+		
 		}
 
 		&_loader {
@@ -271,9 +273,15 @@
 	}
 
 	&.c-grid_media {
+
+
 		.c-grid_item {
 			overflow: hidden;
 			height: 100%;
+
+			&::after {
+				display: none;
+			}
 
 			img {
 				object-position: center;
