--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -13,6 +13,12 @@
 	src: url("../assets/fonts/Kobe1.1-Regular.woff");
 }
 
+
+@font-face {
+	font-family: "Times";
+	src: url("../assets/fonts/times.otf");
+}
+
 @font-face {
 	font-family: "Neue Mtl";
 	src: url("../assets/fonts/NeueMontreal-Regular.otf");
