--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -27,6 +27,10 @@
 	// 	left: 0;
 	// }
 
+	&:hover .circle {
+		transform: scale(1);
+	}
+
 	.circle {
 		width: 100%;
 		height: 100%;
@@ -34,7 +38,9 @@
 		background-color: $dark;
 		top: 0;
 		left: 0;
-		display: none;
+		border-radius: 50%;
+		transform: scale(0);
+		transition: $transition;
 	}
 
 	.c-arrow-svg {
