--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -23,6 +23,19 @@ body {
 	
 }
 
+p {
+	font-family: 'Neue Mtl' !important;
+}
+
+:root {
+	width: 100vw;
+	
+}
+
+.App {
+	min-height: 100%;
+}
+
 
 
 .scroll-to-top {
