--- a/src/components/Stories/c-stories.scss
+++ b/src/components/Stories/c-stories.scss
@@ -20,12 +20,14 @@
 	}
 
 	&_frame {
-		
+		width: 65% !important;
+		left: 50% !important;
+		transform: translateX(-50%) rotate(-1deg) scale(1.4) !important;
+
 		@include media("<=phoneL") {
 			display: none;
 		}
 
-		transform: rotate(-1deg) scale(1.3);
 		position: absolute;
 		top: 1vw !important;
 		height: 150%;
@@ -33,17 +35,31 @@
 		.c-frame_svg_quote {
 			fill: $dark;
 			position: absolute;
-			width: 8vw;
+			width: 6vw;
 
 			&-top {
 				top: -2vw;
-				right: 8.2vw;
+				right: 6vw;
 			}
 
 			&-bottom {
 				bottom: -2vw;
-				left: 8vw;
+				left: 6vw;
 				transform: rotate(180deg);
+			}
+
+			@media screen and (min-width: 1200px) {
+				&-top {
+					right: 70px !important;
+					top: -20px;
+					width: 80px;
+				}
+
+				&-bottom {
+					left: 68px !important;
+					bottom: -15px;
+					width: 80px;
+				}
 			}
 		}
 
@@ -128,7 +144,6 @@
 		}
 
 		.mobile-controls {
-
 			> * {
 				width: 5rem;
 				height: 5rem;
@@ -189,8 +204,6 @@
 
 .c-stories {
 	&_story {
-
-
 		top: 0;
 		left: 50%;
 
