--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -23,8 +23,12 @@ body {
 	
 }
 
-p {
-	font-family: 'Neue Mtl' !important;
+p, .o-about h4 {
+	font-family: 'Cardinal' !important;
+}
+
+.marquee h2 {
+	font-family: 'Kobe Bold' !important;
 }
 
 :root {
