Reconfigure home page

--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -15,7 +15,7 @@
 
 @font-face {
 	font-family: "Kobe";
-	src: url("../assets/fonts/Ginto.woff");
+	src: url("../assets/fonts/Kobe1.1-Regular.woff");
 }
 
 @font-face {
@@ -23,16 +23,9 @@
 	src: url("../assets/fonts/OggItalic.ttf");
 }
 
-
 @font-face {
 	font-family: "Kobe";
 	src: url("../assets/fonts/Kobe1.1-Regular.woff");
-}
-
-
-@font-face {
-	font-family: "Times";
-	src: url("../assets/fonts/times.otf");
 }
 
 @font-face {
@@ -45,17 +38,21 @@
 	src: url("../assets/fonts/NeueMontreal-Regular.otf");
 }
 
-p, a, ul li, caption {
-  font-family: 'Neue Mtl';
+p,
+a,
+ul li,
+caption {
+	font-family: "Neue Mtl";
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Kobe';
+h1,
+h2,
+h3,
+h4 {
+	font-family: "Kobe" !important;
 }
 
 em {
-	
+	font-style: normal;
 	position: relative;
 }
-
-
