--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -85,106 +85,106 @@
 		position: relative;
 		overflow: hidden;
 
-		.c-drawing {
-			position: absolute;
-			z-index: 99999;
+		// .c-drawing {
+		// 	position: absolute;
+		// 	z-index: 99999;
 
-			&_lips {
-				width: 15vw;
-				top: 40vw;
-				left: -1vw;
-				display: block;
-			}
+		// 	&_lips {
+		// 		width: 15vw;
+		// 		top: 40vw;
+		// 		left: -1vw;
+		// 		display: block;
+		// 	}
 
-			&_eye {
-				width: 18vw;
-				top: 5vw;
-				right: -5vw;
-				display: block;
-			}
+		// 	&_eye {
+		// 		width: 18vw;
+		// 		top: 5vw;
+		// 		right: -5vw;
+		// 		display: block;
+		// 	}
 
-			&_ball {
-				width: 5vw;
-				top: 40vw;
-				left: -1vw;
-				display: block;
-			}
+		// 	&_ball {
+		// 		width: 5vw;
+		// 		top: 40vw;
+		// 		left: -1vw;
+		// 		display: block;
+		// 	}
 
-			&_figure {
-				width: 14vw;
-				bottom: 10vw;
-				right: 0;
-				display: block;
-			}
+		// 	&_figure {
+		// 		width: 14vw;
+		// 		bottom: 10vw;
+		// 		right: 0;
+		// 		display: block;
+		// 	}
 
-			&_brow {
-				width: 18vw;
-				top: -2vw;
-				right: -5vw;
-				display: block;
-			}
+		// 	&_brow {
+		// 		width: 18vw;
+		// 		top: -2vw;
+		// 		right: -5vw;
+		// 		display: block;
+		// 	}
 
-			.c-drawing_assortment {
-				width: 100vw;
-				height: 100%;
-				// display: none;
-			}
+		// 	.c-drawing_assortment {
+		// 		width: 100vw;
+		// 		height: 100%;
+		// 		// display: none;
+		// 	}
 
-			.proxy {
-				fill: none;
-				stroke: $light;
-				stroke-width: 3vw;
-			}
+		// 	.proxy {
+		// 		fill: none;
+		// 		stroke: $light;
+		// 		stroke-width: 3vw;
+		// 	}
 
-			path {
-				stroke-linecap: round;
-			}
+		// 	path {
+		// 		stroke-linecap: round;
+		// 	}
 
-			&_blue {
-				top: -5vw;
-				left: -14vw;
-				width: 37vw;
-			}
+		// 	&_blue {
+		// 		top: -5vw;
+		// 		left: -14vw;
+		// 		width: 37vw;
+		// 	}
 
-			&_green {
-				right: -15vw;
-				top: -5vw;
-				width: 30vw;
-			}
+		// 	&_green {
+		// 		right: -15vw;
+		// 		top: -5vw;
+		// 		width: 30vw;
+		// 	}
 
-			&_red {
-				top: 50vw;
-				right: -8vw;
-				width: 30vw;
-			}
+		// 	&_red {
+		// 		top: 50vw;
+		// 		right: -8vw;
+		// 		width: 30vw;
+		// 	}
 
-			&_yellow {
-				bottom: -12vw;
-				left: -8vw;
-				width: 50vw;
-			}
+		// 	&_yellow {
+		// 		bottom: -12vw;
+		// 		left: -8vw;
+		// 		width: 50vw;
+		// 	}
 
-			&_small_yellow {
-				top: 10vw;
-				right: 30vw !important;
-				width: 10vw !important;
-				display: none;
-			}
+		// 	&_small_yellow {
+		// 		top: 10vw;
+		// 		right: 30vw !important;
+		// 		width: 10vw !important;
+		// 		display: none;
+		// 	}
 
-			&_small_pink {
-				top: 8vw;
-				right: 20vw;
-				width: 8vw !important;
-				display: none;
-			}
+		// 	&_small_pink {
+		// 		top: 8vw;
+		// 		right: 20vw;
+		// 		width: 8vw !important;
+		// 		display: none;
+		// 	}
 
-			&_lightBlue {
-				top: 0;
-				left: 0;
-				width: 100vw;
-				display: none;
-			}
-		}
+		// 	&_lightBlue {
+		// 		top: 0;
+		// 		left: 0;
+		// 		width: 100vw;
+		// 		display: none;
+		// 	}
+		// }
 
 		.o-h1 {
 			z-index: 99;
@@ -303,11 +303,6 @@
 	}
 }
 
-.title,
-.body {
-	width: 17vw;
-}
-
 // .title,
 // .title p {
 // 	font-size: 4.167vw;
@@ -416,7 +411,7 @@
 
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-column-gap: 1.5vw;
+	grid-column-gap: 5vw;
 
 	p {
 		animation-delay: 2s;
@@ -467,30 +462,26 @@
 			max-width: 25vw;
 		}
 
-		&_1 {
-			grid-row: 1/2;
-			grid-column: 3/7;
-		}
 
-		&_2 {
-			grid-row: 2/3;
-			grid-column: 6/10;
-		}
+		// &_2 {
+		// 	grid-row: 2/3;
+		// 	grid-column: 5/9;
+		// }
 
-		&_3 {
-			grid-row: 3/4;
-			grid-column: 9/13;
-		}
+		// &_3 {
+		// 	grid-row: 3/4;
+		// 	grid-column: 9/13;
+		// }
 
-		&_4 {
-			grid-row: 4/5;
-			grid-column: 6/10;
-		}
+		// &_4 {
+		// 	grid-row: 4/5;
+		// 	grid-column: 5/9;
+		// }
 
-		&_5 {
-			grid-row: 5/6;
-			grid-column: 3/7;
-		}
+		// &_5 {
+		// 	grid-row: 5/6;
+		// 	grid-column: 1/5;
+		// }
 	}
 
 	@include media("<=phoneL") {
